--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       >
         <p class="text-sm">
           Made with ❤️ by
-          <a href="https://github.com/sauravhathi" class="font-semibold"
-            >@sauravhathi</a
+          <a href="https://github.com/tucommenceapousser" class="font-semibold"
+            >@tucommenceapousser</a
           >
         </p>
       </footer>
@@ -96,9 +96,9 @@
     }
 
     const checkAuthor = document.getElementById("checkAuthor");
-    if (checkAuthor.children[0].children[0].textContent === "@sauravhathi") {
+    if (checkAuthor.children[0].children[0].textContent === "@tucommenceapousser") {
     } else {
-      window.location.href = "https://github.com/sauravhathi";
+      window.location.href = "https://github.com/tucommenceapousser";
     }
 
     text.addEventListener("input", function () {
